[gd_scene load_steps=7 format=2]

[ext_resource path="res://Title_Screen/buttons/Menu Button/ContinueButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/logo.png" type="Texture" id=2]
[ext_resource path="res://Title_Screen/buttons/Menu Button/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Title_Screen/buttons/Menu Button/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Transistion/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Title_Screen/title_screen.gd" type="Script" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 964.0
margin_bottom = 219.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 223.0
margin_right = 964.0
margin_bottom = 443.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 480.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_right = 480.0
margin_bottom = 60.0
rect_rotation = 0.0

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 80.0
margin_right = 480.0
margin_bottom = 140.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 160.0
margin_right = 480.0
margin_bottom = 220.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 484.0
margin_right = 964.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="funimage" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 240.0
margin_top = 110.0
margin_right = 240.0
margin_bottom = 110.0

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 447.0
margin_right = 964.0
margin_bottom = 540.0
size_flags_vertical = 7
text = "BINGODINGODINGO
CHACHALALA GOOGOOGAGA"
align = 2

[node name="fadeRect" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="fade_finished" from="fadeRect" to="." method="_on_fadeRect_fade_finished"]
